# SimEASY

./: .gitignore  26Mg_v1.txt  CMakeLists.txt  README.md  exampleB4d.cc  simEASY.cc
file.C/: read_bkg_us.cpp
gastargetdrawing/drawings_v1/: G4_22Ne_gas.stl  G4_NaI_array(1).stl  G4_NaI_cover_array.stl
gastargetdrawing/drawings_v2/: G4_NaI_array_II.stl  G4_NaI_cover_array_II.stl
gastargetdrawing/drawings_v3/: G4_NaI_array_III.stl  G4_NaI_cover_array_III.stl
gastargetdrawing/drawings_v4/: G4_NaI_array_IV.stl  G4_NaI_cover_array_IV.stl
gastargetdrawing/drawings_v5/: G4_NaI_array_V.stl  G4_NaI_cover_array_V.stl
include/: ActionInitialization.hh  Analysis.hh  B4Analysis.hh  B4RunAction.hh  B4dActionInitialization.hh  B4dEventAction.hh  DataBin.hh  DetectorConstruction.hh  EventAction.hh  Hit.hh  Levels.hh  PrimaryGeneratorAction.hh  RunAction.hh  SDscintillator.hh  UserEventInformation.hh  readlevels.hh
legacy/: B4PrimaryGeneratorAction.cc  B4PrimaryGeneratorAction.hh
macro/: gui.mac  prova.mac  run.mac  run2.mac  run_prova.mac  vis.mac
src/: ActionInitialization.cc  B4RunAction.cc  B4dActionInitialization.cc  B4dEventAction.cc  DetectorConstruction.cc  EventAction.cc  Hit.cc  Levels.cc  PrimaryGeneratorAction.cc  RunAction.cc  SDscintillator.cc  UserEventInformation.cc  prova_livelli  readlevels.cc
